--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,9 +4,6 @@
 #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: Home
+  - name: Documentación
     url: /
-    weight: 10
-  - name: Documentation
-    url: docs/
     weight: 20
